--- a/infomusique/src/App.css
+++ b/infomusique/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   text-align: center;
 }
@@ -38,7 +37,262 @@
   }
 }
 
-.square{
-  border: 1px solid green;
+#nav{
+  height: 60px;
+  font-size: 30px;
+  background: #73bfa7;
+  justify-items: space-between;
+ 
+}
+#icon{
+  width: 300px;
+  height: 180px;
+  margin-top: 25px;
+}
+.navbar-brand{
+  padding-top: 10px;
+}
+#navbarNav{
+  display: flex;
+  justify-content: space-evenly;
+}
+#li1{
+    color: white;
+  margin-right: 25px;
+}
+/* .nav-link{
+  color: white !important;
+} */
+#contconnec{
+  display: flex;
+}
+#contconnec1{
+    margin-top:100px;
+    display:flex ;
+    justify-content: center;
+}
+#contconnec2{
+  margin-top:170px;
+  
+}
+#contconnec2s{
+  margin-top:20px;
+  
+}
+.formulaire{
+  
+  width: 600px;
+  height:500px ;
+  display: flex;
+  justify-content: center;
+}
+.form{
+  
+  height: 500px;
+  width: 500px;
+}
+.form-label{
+  font-size: 30px;
+  font-weight: bold;
+  color: #2f2e41;
+}
+.textbox{
+  border-bottom: 1px solid #282c34;
+  margin-bottom: 50px;
+  width: 500px;
+}
+.textboxs{
+  border-bottom: 1px solid #282c34;
+  margin-bottom: 20px;
+  width: 500px;
+}
+.form-control{
+  height: 50px;
+  font-size: 25px;
+   border: none;
+   width: 500px;
+}
+.form-control:active{
+  height: 50px;
+  font-size: 25px;
+   border: none;
+   width: 500px;
+}
+.form-controls{
+  height: 50px;
+  font-size: 25px;
+   border: none;
+   width: 500px;
+}
+#btn{
+  width: 500px;
+  height: 50px;
+  font-size: 25px;
+  margin-bottom: 12px;
+ border:1px solid #6C63FF;
+ color: #6C63FF;
+}
+#btn:hover{
+ background: #6C63FF;
+ border: #6C63FF;
+ color: white;
+}
+.lien{
+  text-decoration: none;
+  color: #6C63FF;
+}
+.lien:hover{
+  text-decoration: none;
+  color: inherit;
+}
+.accimg{
+  height: 500px;
+  width: 1300px;
+}
+#row1{
+  padding-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+#row2{
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  font-size: 90px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  color: white;
+}
+.titre{
+  font-size: 30px;
+  font-weight: bold;
+}
 
+.image{
+  height: 200px;
+  width: 200px;
+}
+.card{
+  width: 60rem;
+  margin-bottom: 90px;
+}
+.pitem{
+  display: flex;
+  justify-content: center;
+  background: #ffffff;
+}
+.card-title{
+
+}
+.card-titles{
+  color: #555557;
+}
+.ligne{
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.card-body{
+  
+}
+#parent{
+  background: #73bfa7;
+}
+.card-title{
+  font-size: 40px;
+  color: #73bfa7;
+}
+.card-text{
+  font-size: 25px;
+  color: #73bfa7;
+}
+#btn1{
+   border: 1px solid #ffffff;
+   color: #73bfa7;
+   background: white;
+   font-size: 25px;
+}
+#btn2{
+  margin-left: 30px;
+  font-size: 25px;
+  border: 1px solid white;
+  color: white;
+  border-radius: 12px;
+}
+#btn2:hover{
+  border: 1px solid #eb928c;
+  color: white;
+  background: #eb928c;
+}
+#btn2:focus{
+  border: 1px solid #eb928c;
+
+}
+#btn1:hover{
+  background: #73bfa7;
+  border: 1px solid #73bfa7;
+  color: white;
+}
+#row3{
+  
+  display: flex;
+  justify-content: center;
+}
+.seach{
+  height: 80px;
+  font-size: 40px;
+  color: #4d4d4d;
+  font-style: italic;
+  text-align: center;
+  border:none;
+  border-radius: 12px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+#vu{
+  background: white;
+}
+.img-fluid{
+  height: 250px;
+  width: 300px;
+}
+#bor{
+  background: #eb928c;
+}
+.alert{
+  padding-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
+.message{
+  background: #eb928c;
+  margin-right: 380px;
+  text-align: center;
+  padding: 10px;
+  font-size: 1.5em;
+  color: white;
+}
+.pcompte{
+  display: flex;
+  margin-left: 30px;
+}
+.pimage{
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.pimagep{
+  padding-top: 20px;
+  margin-right: 15px;
+}
+.info{
+  padding-top: 12px;
+  padding-bottom: 8px;
+  font-size: 25px;
+  color: white;
+}
+.info1{
+  font-size: 2vh;
 }
